--- a/index.html
+++ b/index.html
@@ -156,67 +156,67 @@ layout: default
         <img src="/images/cio-partners/logo_olympic.png" alt="olympic" class="come-in-module">
         <ul class="sponsors-list come-in-module">
             <li>
-                <a rel="noopener noreferrer" href="https://www.coca-cola.com/global/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.coca-cola.com/global/">
 		    <img src="/images/cio-partners/Coca-Cola_logo_200.png" alt="Coca-Cola">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://alibabagroup.com/en/global/home">
+                <a target="_blank" rel="noopener noreferrer" href="https://alibabagroup.com/en/global/home">
 		    <img src="/images/cio-partners/Alibaba_200.png" alt="Alibaba Group">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://atos.net/en/">
+                <a target="_blank" rel="noopener noreferrer" href="https://atos.net/en/">
 		    <img src="/images/cio-partners/Atos_logo_200.png" alt="Atos">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.bridgestone.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.bridgestone.com/">
 		    <img src="/images/cio-partners/Bridgestone_logo_200.png" alt="Bridgestone">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.dow.com/en-us">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.dow.com/en-us">
 		    <img src="/images/cio-partners/Dow_logo_200.png" alt="Dow">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.ge.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.ge.com/">
 		    <img src="/images/cio-partners/GE_logo_200.png" alt="GE">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.intel.com/content/www/us/en/homepage.html">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.intel.com/content/www/us/en/homepage.html">
 		    <img src="/images/cio-partners/Intel_logo_200.png" alt="Intel">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.omegawatches.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.omegawatches.com/">
 		    <img src="/images/cio-partners/Omega_logo_200.png" alt="Omega">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.panasonic.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.panasonic.com/">
 		    <img src="/images/cio-partners/Panasonic_logo_200.png" alt="Panasonic">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://us.pg.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://us.pg.com/">
 		    <img src="/images/cio-partners/PG_logo_200.png" alt="PG">
 		</a>
             </li>
             <li> 
-                <a rel="noopener noreferrer" href="https://www.samsung.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.samsung.com/">
 		    <img src="/images/cio-partners/Samsung_200.png" alt="Samsung">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://fr.toyota.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://fr.toyota.ch/">
 		    <img src="/images/cio-partners/Toyota_logo_200.png" alt="Toyota">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://usa.visa.com/about-visa.html">
+                <a target="_blank" rel="noopener noreferrer" href="https://usa.visa.com/about-visa.html">
 		    <img src="/images/cio-partners/Visa_logo_200.png" alt="Visa">
 		</a>
             </li>
@@ -226,17 +226,17 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <a rel="noopener noreferrer" href="https://www.retraitespopulaires.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.retraitespopulaires.ch/">
 		    <img src="/images/cio-partners/Retraite_Populaire.png" alt="Retraites Populaires">
 		</a>
             </li>
 	    <li>
-                <a rel="noopener noreferrer" href="https://www.swisscom.ch/fr/clients-prives.html">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.swisscom.ch/fr/clients-prives.html">
 		    <img src="/images/cio-partners/Swisscom.png" alt="Swisscom">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.eca-vaud.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.eca-vaud.ch/">
 		    <img src="/images/cio-partners/ECA.png" alt="ECA">
 		</a>
             </li>
@@ -246,17 +246,17 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <a rel="noopener noreferrer" href="https://www.loyco.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.loyco.ch/">
 		    <img src="/images/cio-partners/Loyco.png" alt="Loyco">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.dbschenker.com/ch-en">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.dbschenker.com/ch-en">
 		    <img src="/images/cio-partners/DB_Schenker.png" alt="DB Schenker">
 		</a>
             </li>	
             <li>
-                <a rel="noopener noreferrer" href="https://flon.ch/fr/">
+                <a target="_blank" rel="noopener noreferrer" href="https://flon.ch/fr/">
 		    <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
 		</a>
             </li>
@@ -266,27 +266,27 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <a rel="noopener noreferrer" href="http://www.lausanne.ch/fr/">
+                <a target="_blank" rel="noopener noreferrer" href="http://www.lausanne.ch/fr/">
 		    <img src="/images/cio-partners/Ville_Lausanne.png" alt="Ville de Lausanne">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.swissolympic.ch/fr/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.swissolympic.ch/fr/">
 		    <img src="/images/cio-partners/Swiss_Olympic.png" alt="Swiss Olympic">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.vd.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.vd.ch/">
 		    <img src="/images/cio-partners/Canton_Vaud.png" alt="Canton de Vaud">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.baspo.admin.ch/fr/home.html">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.baspo.admin.ch/fr/home.html">
 		    <img src="/images/cio-partners/Confederation_Suisse.png" alt="Confédération Suisse">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="http://www.fondsdusportvaudois.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="http://www.fondsdusportvaudois.ch/">
 		    <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
 		</a>
             </li>
@@ -296,47 +296,47 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
-                <a rel="noopener noreferrer" href="https://eracom.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://eracom.ch/">
 		    <img src="/images/cio-partners/Eracom.png" alt="Eracom">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.ecole-construction.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.ecole-construction.ch/">
 		    <img src="/images/cio-partners/EDC.png" alt="EDC">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.ecal.ch/fr/100/homepage">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.ecal.ch/fr/100/homepage">
 		    <img src="/images/cio-partners/Ecal.png" alt="Ecal">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.ehl.edu/fr">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.ehl.edu/fr">
 		    <img src="/images/cio-partners/EHL.png" alt="EHL">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.epfl.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.epfl.ch/">
 		    <img src="/images/cio-partners/EPFL.png" alt="EPFL">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://www.hemu.ch/accueil/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.hemu.ch/accueil/">
 		    <img src="/images/cio-partners/HEMU.png" alt="HEMU">
 		</a>
             </li>
 	    <li>
-                <a rel="noopener noreferrer" href="https://www.chuv.ch/fr/chuv-home/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.chuv.ch/fr/chuv-home/">
 		    <img src="/images/cio-partners/CHUV.png" alt="CHUV">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="http://www.unil.ch/index.html">
+                <a target="_blank" rel="noopener noreferrer" href="http://www.unil.ch/index.html">
 		    <img src="/images/cio-partners/UNIL.png" alt="UNIL">
 		</a>
             </li>
             <li>
-                <a rel="noopener noreferrer" href="https://heig-vd.ch/">
+                <a target="_blank" rel="noopener noreferrer" href="https://heig-vd.ch/">
 		    <img src="/images/cio-partners/HEIG-VD.png" alt="HEIG-VD">
 		</a>
             </li>
