--- a/venues.html
+++ b/venues.html
@@ -9,9 +9,8 @@ layout: default
     <h1>
       {{document.fragments.title_section_1.text}}
     </h1>
-    <div class="key_numbers">
+    <div class="key_numbers" style="padding-top:10px; padding-bottom:20px;">
       <div class="container fade-in-module">
-        <h1>{{ about_data.singleevent }}</h1>
         <div class="singleevent_img">
           {% if site.lang == "fr-fr" %}
             <img src="/images/about/L2020_VMP_FR.png" width="60%">
