--- a/medias.html
+++ b/medias.html
@@ -78,6 +78,7 @@ layout: default
       <h2>Newsletter</h2>
       <div class="newsl">
         {% if site.lang == "fr-fr" %}
+          <a href="https://mailchi.mp/f26952019476/newsletter-fevrier-2019" target="_blank" rel="noopener"> Février 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-janvier-2019" target="_blank" rel="noopener"> Janvier 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-decembre-2-2018" target="_blank" rel="noopener"> Décembre 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-decembre-2018" target="_blank" rel="noopener"> Décembre 2018 </a><br>
@@ -93,6 +94,7 @@ layout: default
           <a href="https://mailchi.mp/d1078c26c261/lausanne-2020-newsletter-8-juin-2017" target="_blank" rel="noopener"> Juin 2017 </a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="https://mailchi.mp/f53cef123cb3/newsletter-februar-2019" target="_blank" rel="noopener"> Februar 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-januar-2019" target="_blank" rel="noopener"> Januar 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-dezember-2-2018" target="_blank" rel="noopener"> Dezember 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020/newsletter-dezember-2018" target="_blank" rel="noopener"> Dezember 2018 </a><br>
@@ -107,6 +109,7 @@ layout: default
           <a href="https://mailchi.mp/1b14eb75cf7e/lausanne-2020-newsletter-8-juni-2017" target="_blank" rel="noopener"> Juni 2017 </a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="https://mailchi.mp/b17326b6231a/newsletter-february-2019" target="_blank" rel="noopener"> February 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-january-2019" target="_blank" rel="noopener"> January 2019 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2-2018" target="_blank" rel="noopener"> December 2018 </a><br>
           <a href="https://mailchi.mp/lausanne2020.com/newsletter-december-2018" target="_blank" rel="noopener"> December 2018 </a><br>
