--- a/medias.html
+++ b/medias.html
@@ -26,6 +26,7 @@ layout: default
       {% endif %}
       <div class="prelease">
         {% if site.lang == "fr-fr" %}
+          <a href="/images/home/2019-03-19-Ambassadeurs-FR.pdf" target="_blank" rel="noopener">19.03.2019 : Dix nouvelles stars du sport rejoignent l’aventure Lausanne 2020</a><br>
           <a href="/images/home/2019-03-14-Pictogrammes-FR.pdf" target="_blank" rel="noopener">14.03.2019 : A 300 jours de son ouverture, Lausanne 2020 présente ses pictogrammes</a><br>
           <a href="/images/home/2019-01-09-OYtG-FR.pdf" target="_blank" rel="noopener">09.01.2019 : A une année jour pour jour de son ouverture, Lausanne 2020 présente sa mascotte : Yodli !</a><br>
           <a href="/images/home/2019-01-04-FAIVRE-FR.pdf" target="_blank" rel="noopener">04.01.2019 : Virginie Faivre nommée Présidente du comité d’organisation de Lausanne 2020</a><br>
@@ -37,6 +38,7 @@ layout: default
           <a href="/images/home/Lausanne2020_Pressrelease_131stIOCSession_Lima_2017-13-09_FR.pdf" target="_blank" rel="noopener">13.09.2017 : Lausanne 2020 - "Nos promesses deviennent réalité"</a><br>
         {% endif %}
         {% if site.lang == "de-de" %}
+          <a href="/images/home/2019-03-19-Ambassadeurs-DE.pdf" target="_blank" rel="noopener">19.03.2019 : Zehn neue Sportstars werden Botschafter für Lausanne 2020</a><br>
           <a href="/images/home/2019-03-14-Pictogrammes-DE.pdf" target="_blank" rel="noopener">14.03.2019 : 300 Tage vor Beginn der Spiele präsentiert Lausanne 2020 seine Piktogramme</a><br>
           <a href="/images/home/2019-01-09-OYtG-DE.pdf" target="_blank" rel="noopener">09.01.2019 : Exakt ein Jahr vor der Eröffnungszeremonie präsentiert Lausanne 2020 sein Maskottchen Yodli</a><br>
           <a href="/images/home/2019-01-04-FAIVRE-DE.pdf" target="_blank" rel="noopener">04.01.2019 : Virginie Faivre neue Präsidentin des Organisationskomitees Lausanne 2020</a><br>
@@ -45,6 +47,7 @@ layout: default
           <a href="/images/home/Lausanne2020.CP.09.04.2018._ALL.pdf" target="_blank" rel="noopener">09.04.2018 : Lausanne 2020 liegt dem Zeitplan voraus</a><br>
         {% endif %}
         {% if site.lang == "en-gb" %}
+          <a href="/images/home/2019-03-19-Ambassadeurs-EN.pdf" target="_blank" rel="noopener">03/19/2019 : Ten new sport stars join Lausanne 2020</a><br>
           <a href="/images/home/2019-03-14-Pictogrammes-EN.pdf" target="_blank" rel="noopener">03/14/2019 : Lausanne 2020 reveals its pictograms 300 days before kick-off</a><br>
           <a href="/images/home/2019-01-09-OYtG-EN.pdf" target="_blank" rel="noopener">01/09/2019 : A year to the day of its opening, Lausanne 2020 presents its mascot: Yodli!</a><br>
           <a href="/images/home/2019-01-04-FAIVRE-EN.pdf" target="_blank" rel="noopener">01/04/2019 : Freestyle skiing star Virginie Faivre appointed President of the Lausanne 2020 Organising Committee</a><br>
