--- a/index.html
+++ b/index.html
@@ -260,6 +260,11 @@ layout: default
 		    <img src="/images/cio-partners/Quartier_Du_Flon.png" alt="Quartier du Flon">
 		</a>
             </li>
+	    <li>
+                <a target="_blank" rel="noopener noreferrer" href="https://bcw-global.com/">
+		    <img src="/images/cio-partners/BCW_logo.png" alt="BCW">
+		</a>
+            </li>
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL SUPPORT</h4>
 	<hr class="hr-line" style="margin-left: 188px;">
