--- a/fanattitude.html
+++ b/fanattitude.html
@@ -16,12 +16,12 @@ layout: default
       </div>
     </div>
  
-    <p class="pme-text">Les Jeux Olympiques de la Jeunesse représentent une magnifique opportunité pour atteindre et inspirer la nouvelle génération. Le Pack PME garantit à tout bon supporter l’équipement nécessaire au soutien des Jeux Olympiques d’hiver Lausanne 2020 : bonnet, parapluie, calepin et autres goodies. Vous devenez un fan & un insider. <br>
+    <p class="pme-text">Les Jeux Olympiques de la Jeunesse représentent une magnifique opportunité pour atteindre et inspirer la nouvelle génération. Le Pack Fan'attitude garantit à tout bon supporter l’équipement nécessaire au soutien des Jeux Olympiques d’hiver Lausanne 2020 : bonnet, parapluie, calepin et autres goodies. Vous devenez un fan & un insider. <br>
     En effet, vous bénéficiez de droits de participation privilégiés avant et pendant l’événement.<br>
     <br>
-    Acquérir un Pack PME, c’est partager des convictions. Et des valeurs. Afficher, en avant-première, votre fan’attitude, c’est vous inscrire dans une dynamique régionale, cantonale et nationale unique. C’est aussi montrer votre soutien à la génération montante.<br> 
+    Acquérir un Pack Fan'attitude, c’est partager des convictions. Et des valeurs. Afficher, en avant-première, votre fan’attitude, c’est vous inscrire dans une dynamique régionale, cantonale et nationale unique. C’est aussi montrer votre soutien à la génération montante.<br> 
     <br>
-    Nous nous réjouissons de vous accueillir dans notre communauté de fans et vous invitons à télécharger le dépliant pour découvrir les détails du Pack PME : <a class="pme-link" href="/images/home/Pack_PME.pdf" target="_blank" rel="noopener">Visionner le dépliant</a><br>
+    Nous nous réjouissons de vous accueillir dans notre communauté de fans et vous invitons à télécharger le dépliant pour découvrir les détails du Pack Fan'attitude : <a class="pme-link" href="/images/home/Pack_PME.pdf" target="_blank" rel="noopener">Visionner le dépliant</a><br>
     <br>
     Cliquez <a class="pme-link" href="https://goo.gl/forms/qMkQOcJT2EJH21lT2" target="_blank" rel="noopener">ici</a> pour saisir votre commande. <br>
   </div>
