--- a/index.html
+++ b/index.html
@@ -271,6 +271,16 @@ layout: default
 	<hr style="border-top: 1px solid #fff;">
 	<ul class="sponsors-list come-in-module">
             <li>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.baspo.admin.ch/fr/home.html">
+		    <img src="/images/cio-partners/Confederation_Suisse.png" alt="Confédération Suisse">
+		</a>
+            </li>
+            <li>
+                <a target="_blank" rel="noopener noreferrer" href="http://www.fondsdusportvaudois.ch/">
+		    <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
+		</a>
+            </li>
+	    <li>
                 <a target="_blank" rel="noopener noreferrer" href="http://www.lausanne.ch/fr/">
 		    <img src="/images/cio-partners/Ville_Lausanne.png" alt="Ville de Lausanne">
 		</a>
@@ -283,16 +293,6 @@ layout: default
             <li>
                 <a target="_blank" rel="noopener noreferrer" href="https://www.vd.ch/">
 		    <img src="/images/cio-partners/Canton_Vaud.png" alt="Canton de Vaud">
-		</a>
-            </li>
-            <li>
-                <a target="_blank" rel="noopener noreferrer" href="https://www.baspo.admin.ch/fr/home.html">
-		    <img src="/images/cio-partners/Confederation_Suisse.png" alt="Confédération Suisse">
-		</a>
-            </li>
-            <li>
-                <a target="_blank" rel="noopener noreferrer" href="http://www.fondsdusportvaudois.ch/">
-		    <img src="/images/cio-partners/Fond_Du_Sport_Vaudois.png" alt="Fond du Sport Vaudois">
 		</a>
             </li>
 	    {% if site.lang == "fr-fr" %}
@@ -313,7 +313,12 @@ layout: default
 		    	<img src="/images/cio-partners/VAUD-EN.png" alt="Lake Geneva Region">
 		    </a>
             	</li>
-          {% endif %}
+            {% endif %}
+	    <li>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.lausanne-tourisme.ch/">
+		    <img src="/images/cio-partners/LT.png" alt="Lausanne Tourisme">
+		</a>
+            </li>	
         </ul>
 	<h4 class="partners-title">INSTITUTIONAL PARTNERS</h4>
 	<hr class="hr-line" style="margin-left: 188px;">
